# Cedica-App

./: split.py
admin/: .gitignore  README.md  pyproject.toml  tailwind.config.js
admin/src/core/: config.py  contact.py  database.py  equestrian.py  health_insurance.py  minio.py  post.py  riders_and_horsewomen.py  seeds.py  team_member.py  users.py  utils.py
admin/src/core/auth/: __init__.py
admin/src/core/board/: __init__.py  issue.py
admin/src/core/collections/: __init__.py
admin/src/core/models/: collection.py  contact.py  equestrian.py  health_insurance .py  payment.py  post.py  riders_and_horsewomen.py  team_member.py  users.py
admin/src/core/payments/: __init__.py
admin/src/core/users/: __init__.py
admin/src/web/: __init__.py  errors.py  forms.py  routes.py  storage.py
admin/src/web/api/: contacts.py  posts.py
admin/src/web/controllers/: auth.py  collections.py  contacts.py  equestrian.py  graphics.py  issues.py  payments.py  posts.py  reports.py  riders_and_horsewoman.py  team_members.py  user.py  users.py
admin/src/web/forms/: AuthForm.py  CollectionForm.py  EquestrianForm.py  PaymentForm.py  PostForm.py  RiderAndHorsewomanForm.py  TeamMemberForm.py  UserForm.py
admin/src/web/handlers/: auth.py  error.py  users.py
admin/src/web/schema/: contact.py
admin/src/web/templates/: error.html  home.html  layout.html
admin/src/web/templates/auth/: login.html  register.html
admin/src/web/templates/collections/: collection_register_form.html  edit_collection_form.html  show_collections.html  (+3 more)
admin/static/: login_style.css  output.css  style.css
(+60 files in other folders)
